--- a/plugins/poll/assets/stylesheets/mobile/poll.scss
+++ b/plugins/poll/assets/stylesheets/mobile/poll.scss
@@ -1,7 +1,9 @@
 div.poll {
   .poll-buttons {
+    padding: 0 5px 5px 5px;
+
     button {
-      margin: 3px 0;
+      margin: 4px 2px;
     }
   }
 }
